update test procedure